Do not show Klipper popup in taskmanager or switcher on wayland

BUG:453737